<resources>
    <string name="app_name">Ask Ethan!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Don\'t have an account? <u><i>Sign up</i></u> now!</string>
    <string name="login_attempts">Login Attempts remaining:</string>
    <string name="login">Log In</string>
    <string name="already_user">Already a user? Click <u><i>here</i></u> to sign in.</string>
    <string name="conditions">Agree to terms and conditions</string>
    <string name="password_reset">Enter your email address to reset your password.</string>
    <string name="ask_title_hint">Give this question a title</string>
    <string name="ask_question_hint">Ask your question!</string>

    <!-- Pages -->
    <string name="home_heading">Latest Questions</string>
    <string name="ask_heading">Ask Ethan a Question</string>
    <string name="settings_heading">Settings</string>

    <!-- Navigation -->
    <string name="nav_profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_question">Ask</string>
    <string name="nav_contact">Contact Ethan</string>
    <string name="nav_settings">Settings</string>

    <string name="about_me">At a young age, Ethan had a candid characteristic to break things apart and put them back together and this attitude brought out this true passion in engineering. He is perhaps best known for his natural curiosity, willingness and dedication for learning, and pragmatic approach on solving problems.</string>
    <string name="about_me2">With no hesitation and fear, Ethan stepped onto new territories and allowed his experiences to diversify his view of the world. He continues to believe that a worldly experience can lead to success. For Ethan, knowledge is power and with power, comes the ability to positively influence people’s lives.</string>
</resources>