<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".fragments.AskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/askQuestionsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/ask_heading"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Title"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:backgroundTint="@color/other_blue"
                android:hint="@string/ask_title_hint"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/questionDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="Description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="10dp"
            android:gravity="start|top"
            android:background="@drawable/question_box"
            android:hint="@string/ask_question_hint"
            android:inputType="textMultiLine"
            android:minHeight="100dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/dark_blue"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Ask!"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:elevation="16dp"
            android:textColor="@android:color/white" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>